--- a/HACKING
+++ b/HACKING
@@ -4,32 +4,30 @@ Infrastructure
     - use list.h for doubly linked lists
     - code cleanups
  o vprintf has no %p, and might be quite bogus
- o clean up build system dependency generation
  o panic function
  o sprinkle -EFOO error codes around
- o Un-hackify kernel message output
+
+Memory Management
+ o Use e820 maps to initialise buddy system
+ o Finish off the buddy system
+ o Implement kfree()
+ o Support order > 0 in slab allocator (implement coalescing in free_page)
 
 Scheduling / Synchronisation
  o task switcher is just wrong
-    - save eflags
+    - save all regs + eflags
     - irq handling is bogus, do not schedule from ISR context
     - add bottom half/tasklet context
  o Get rid of cli/sti as locking primitives
  o Better semaphores / wait queues
- o No pre-emption in kernel mode for now
+ o Disable pre-emption in kernel mode for now
 
 Drivers
  o Make arch-independent drivers
  o Improve floppy driver
+ o Finish PCI code
  o ATA Hard disk driver
-
-Memory Management
- o Finish off the buddy system
- o Implement kfree()
- o Support order > 0 in slab allocator
-
-Intel Architecture
- o Use e820 maps
+ o USB stack :)
 
 Virtual Filesystem Switch
  o cache inodes
